# neuroadapt-env

./: .env.example  .gitignore  DEPLOY.sh  Dockerfile  README.md  __init__.py  baseline.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
outputs/: baseline_scores.json
server/: __init__.py  app.py  curriculum.py  environment.py  evaluation.py  graders.py  profiles.py  requirements.txt
static/: index.html
tests/: test_env.py
